AI-JADEDEVS4/src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Bundle_SKU__c</fullName>
        <description>This field used to tag parent bundle from product object</description>
        <formula>PricebookEntry.Product2.Parent_Bundle__c</formula>
        <inlineHelpText>This field used to tag parent bundle from product object</inlineHelpText>
        <label>Parent Bundle SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundled_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The discount on the parent bundle product line item</description>
        <label>Bundled Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bundled_ID__c</fullName>
        <description>This is the parent bundle order product item Id that this child belongs to.</description>
        <inlineHelpText>This is the parent bundle order product item Id that this child belongs to.</inlineHelpText>
        <label>Bundled ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled__c</fullName>
        <formula>QuoteLineId__r.SBQQ__Bundled__c</formula>
        <label>Child Bundle SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConversionID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Used by Quote-To-Order conversion process to prevent duplicate line item entries.</inlineHelpText>
        <label>ConversionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>QuoteLineId__r.SBQQ__TotalDiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>QuoteLineId__r.SBQQ__TotalDiscountAmount__c</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price_AI__c</fullName>
        <description>This is the custom List Price used to help with syncing with NetSuite</description>
        <formula>IF( Bundled__c,
    Case( CurrencyIsoCode,
       &quot;USD&quot;, 
         QuoteLineId__r.SBQQ__ProductOption__r.Unit_Price_USD__c,
       &quot;AUD&quot;,
         QuoteLineId__r.SBQQ__ProductOption__r.Unit_Price_AUD__c,
       &quot;CAD&quot;,
         QuoteLineId__r.SBQQ__ProductOption__r.Unit_Price_CAD__c,
       &quot;JPY&quot;,
         QuoteLineId__r.SBQQ__ProductOption__r.Unit_Price_JPY__c,
       &quot;GBP&quot;,
         QuoteLineId__r.SBQQ__ProductOption__r.Unit_Price_GBP__c,
       QuoteLineId__r.SBQQ__ProductOption__r.Unit_Price_USD__c),
     ListPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the custom List Price used to help with syncing with NetSuite</inlineHelpText>
        <label>List Price (AI)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MultiYear_Discount_Amount__c</fullName>
        <formula>QuoteLineId__r.MultiYear_Line_Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultiYear Line Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <formula>If( Bundled__c ,
     ((List_Price_AI__c *(1- Bundled_Discount__c))/ 12)*  Order.Term_minus_free_months__c   ,
    QuoteLineId__r.SBQQ__NetPrice__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>QuoteLineId__r.SBQQ__NetPrice__c</inlineHelpText>
        <label>Net Unit Price with Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityProductId__c</fullName>
        <label>Opportunity Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_Touch__c</fullName>
        <inlineHelpText>Used only to touch Order Products</inlineHelpText>
        <label>Order Product Touch</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Net_Total__c</fullName>
        <formula>((Net_Unit_Price__c *  Quantity) * (IF ( ISPICKVAL(Revenue_Type__c, &apos;Subscription&apos;),  Order.Term_Months__c  /12, 1 ))) - MultiYear_Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Net_Unit_Price__c</fullName>
        <formula>( Total_Unit_Price__c  - (MultiYear_Discount_Amount__c/Quantity))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Hours__c</fullName>
        <label>PS Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rollup_Total_Price__c</fullName>
        <label>Rollup Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <label>Solution Architect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount_Per_Line__c</fullName>
        <description>(ListPrice * Quantity) *  (Order.Booking_Details_Term_Months__c /12) - (Net_Unit_Price__c * Quantity)
Total_List_Price__c - (Net_Unit_Price__c * Quantity)* ( IF ( ISPICKVAL(Revenue_Type__c, &apos;Subscription&apos;), Order.Term_Months__c /12, 1 ))</description>
        <formula>Total_List_Price__c - (Net_Unit_Price__c * Quantity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Amount Per Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount__c</fullName>
        <formula>((ListPrice -  Net_Unit_Price__c) *  Quantity) * ( Order.Term_Months__c  / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Total Discount Amount for the line item</inlineHelpText>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <description>* ( IF ( ISPICKVAL(Revenue_Type__c, &apos;Subscription&apos;), Order.Term_Months__c /12, 1 ))</description>
        <formula>List_Price_AI__c    *  QuoteLineId__r.SBQQ__Quantity__c* ( IF ( ISPICKVAL(Revenue_Type__c, &apos;Subscription&apos;),  Order.Term_Months__c /12, 1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total List Price = List Price * Quantity * ( terms /12 )</inlineHelpText>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Amount__c</fullName>
        <formula>QuoteLineId__r.SBQQ__TotalDiscountAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the Total Amount after Discount and for the Term Length. Pulling from QuoteLineId__r.SBQQ__TotalDiscountAmount__c</inlineHelpText>
        <label>Total Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_AI__c</fullName>
        <description>Total Price without the bundle line items</description>
        <inlineHelpText>Total Price without the bundle line items</inlineHelpText>
        <label>Total Price (AI)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unit_Price__c</fullName>
        <description>This is the Net Unit Price * (Term/12) to represent the Unit Price based on the term.</description>
        <formula>QuoteLineId__r.SBQQ__NetPrice__c * (IF ( ISPICKVAL(Revenue_Type__c, &apos;Subscription&apos;),  Order.Term_Months__c  /12, 1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Net Unit Price * (Term/12) to represent the Unit Price based on the term.</inlineHelpText>
        <label>Total Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>